<resources>
    <string name="app_name">Inventory Portal</string>
    <string name="btn_id">Enter your ID</string>
    <string name="btn_scan">Scan your ID</string>
    <string name="tv_title">Dev - Inventory Portal</string>
    <string name="tv_psw">Enter Personelle Password :</string>
    <string name="tv_id">Enter Personelle ID :</string>
    <string name="bt_ch_o">Check out</string>
    <string name="bt_ret">Return</string>
    <string name="bt_cr">Create</string>
    <string name="btn_item_id">Enter Item id</string>
    <string name="btn_item_scan">Scan Item id</string>
    <string name="et_id">Enter your id ...</string>
    <string name="et_psw">Enter your password ...</string>
    <string name="et_item_num">Enter item number ...</string>
    <string name="et_qun">Quantity checked out ...</string>
    <string name="drp_ln">At Which line ?</string>
    <string name="drp_mch">At Which Machine ?</string>
    <string name="drp_ln_cr">Asset (At Which line ?)</string>
    <string name="et_cmp">The Company name ...</string>
    <string name="et_qun_new">Quantity Needed ...</string>
    <string name="et_dsc">Why ? / Description</string>
    <string name="et_cat">Catalog Number ...</string>
    <string name="tv_or">OR</string>
    <string name="dumy">Any Thing</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="wrong">Wrong input</string>
    <string name="login">Enter</string>
    <string name="pass">Enter Password ...</string>
    <string name="line">Which Line ?</string>
    <string name="machine">Which Machine ?</string>

    <!-- TEST-->
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
</resources>
