<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.PasswordActivity"
    android:background="@color/backG"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tv_psw"
        android:textColor="@color/textC"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passwrd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/textC"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        android:inputType="numberPassword"
        android:hint="@string/pass" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_buttons"
            android:id="@+id/enter"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>

</LinearLayout>