<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Enter Item Number ..."
            android:textColor="@color/white"
            android:backgroundTint="@color/bg_light"
            android:textSize="20sp"
            android:inputType="number"
            android:textColorHint="@color/bg_light"
            android:id="@+id/itm_num"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_or"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:textColor="@color/bg_light"
            android:visibility="visible"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg_light"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="Scan"
            android:visibility="visible"
            android:id="@+id/scan_it"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Enter Quantity Added ..."
        android:textColor="@color/white"
        android:backgroundTint="@color/bg_light"
        android:textSize="20sp"
        android:inputType="number"
        android:textColorHint="@color/bg_light"
        android:id="@+id/itm_qnt"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/line"
        android:layout_margin="20dp"

        android:spinnerMode="dialog"
        android:prompt="@string/line"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/mach"
        android:layout_margin="20dp"
        android:spinnerMode="dialog"
        android:prompt="@string/machine"/>

</LinearLayout>