<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backG"
    android:orientation="vertical"
    tools:context=".View.ReturnActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionbarOpacity"
        app:theme="@style/TransparentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_ret"
        android:textColor="@color/textC"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="The Quantity  : "
            android:textColor="@color/textC"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="Enter Quantity..."
            android:textColorHint="@color/textC"
            android:layout_margin="20dp"
            android:textColor="@color/textC"
            android:inputType="number"
            android:padding="10dp"
            android:id="@+id/qn"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/btn_item_id"
        android:textColorHint="@color/textC"
        android:layout_margin="20dp"
        android:textColor="@color/textC"
        android:padding="10dp"
        android:id="@+id/itm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="The Bin location  : "
            android:textColor="@color/textC"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/dumy"
            android:textColor="@color/textC"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:id="@+id/bin"/>
    </LinearLayout>

    <include layout="@layout/buttons_views"/>

</LinearLayout>